# mlrun-trial

./: .gitignore  Makefile  README.md  compose_env.sh  project.yaml  pyproject.toml  trial.ipynb
src/: create-proj.py  data-prep.py
tests/: test_hello.py
