[project]
name = "MLRun-trial"
version = "0.1.0"
description = "Demo project for using the MLRun project"
authors = [{name = "Brandon Corfman", email = "h9tbgnbbk@privaterelay.appleid.com"}]
dependencies = [
    "pyyaml==5.3",
    "mlrun~=1.6.4",
    "scikit-learn~=1.4.0",
    "numpy~=1.26",
    "plotly>=5.22.0",
    "graphviz>=0.20.3",
    "protobuf==3.20.1",
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.9"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.18.1",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mlrun-trial"]

[tool.pytest.ini_options]
addopts = "--cov-branch --cov-report term --cov=src"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers=["unit: Unit tests.",
         "system: System (browser-based) tests."]
         
[tool.coverage.run]
source = ["src"]
